<resources>
    <string name="app_name">Supervision App</string>
    <string name="app_bar_logout_text">Logout</string>
    <string name="prompt_email">Benutzername</string>
    <string name="prompt_password">Passwort</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="welcome">"Willkommen!"</string>
    <string name="invalid_username">Kein valider Nutzername</string>
    <string name="invalid_password">Falsches Passwort</string>
    <string name="login_failed">"Login fehlgeschlagen"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_advertised_theses">Ausgeschriebene Arbeiten</string>
    <string name="tab_my_thesis">Meine Arbeit</string>
    <string name="tab_theses_requests">Anfragen</string>
    <string name="tab_supervised_thesis">Betreute Arbeiten</string>
    <string name="tab_my_research">Meine Forschung</string>
    <string name="fragment_advertised_theses_header_textView">Ausgeschriebene Arbeiten</string>
    <string name="fragment_my_thesis_header_title_thesis">Titel:</string>
    <string name="fragment_my_thesis_header_title_no_thesis">Du hast noch keine Abschlussarbeit angefangen</string>
    <string name="fragment_my_thesis_header_first_supervisor">Erstgutachter:</string>
    <string name="fragment_my_thesis_header_second_supervisor">Zweitgutachter:</string>
    <string name="fragment_my_thesis_header_expose">Exposé:</string>
    <string name="fragment_my_thesis_iconExposeDescription">A file icon</string>
    <string name="fragment_my_thesis_header_status">Status:</string>
    <string name="activity_submit_thesis_textViewTitle">Titel:</string>
    <string name="activity_submit_thesis_textViewSubTitle">Untertitel:</string>
    <string name="activity_submit_thesis_plainTextSubTitle">Untertitel der Arbeit</string>
    <string name="activity_submit_thesis_textViewDescription">Beschreibung:</string>
    <string name="activity_submit_thesis_multiLineTextDescription">Beschreibe hier deine Arbeit</string>
    <string name="activity_submit_thesis_headerExpose">Exposé hochladen:</string>
    <string name="activity_submit_thesis_uploadExposeIconDescription">An upload file icon</string>
    <string name="activity_submit_thesis_buttonSend">Absenden</string>
    <string name="activity_submit_thesis_buttonCancel">Abbrechen</string>
    <string name="activity_submit_thesis_pageTitle">Arbeit Hochladen</string>
    <string name="activity_view_thesis_request_pageTitle">Anfrage</string>
    <string name="activity_view_thesis_request_thesis_type_title_first">Betreuungsanfrage</string>
    <string name="activity_view_thesis_request_thesis_type_title_second">Zweitbetreuungsanfrage</string>
    <string name="activity_view_thesis_request_thesis_headerTitle">Titel:</string>
    <string name="activity_view_thesis_request_thesis_headerSubTitle">Untertitel:</string>
    <string name="activity_view_thesis_request_thesis_headerFirstSupervisor">Erstbetreuer:</string>
    <string name="activity_view_thesis_request_thesis_headerStudent">Student:</string>
    <string name="activity_view_thesis_request_thesis_headerExpose">Exposé:</string>
    <string name="activity_view_thesis_request_thesis_iconExposeDescription">A file icon</string>
    <string name="activity_view_thesis_request_thesis_buttonAccept">Annehmen</string>
    <string name="activity_view_thesis_request_thesis_buttonReject">Ablehnen</string>
    <string name="activity_view_thesis_request_thesis_accept_error">Es ist ein Fehler aufgetreten</string>
    <string name="activity_advertise_thesis_pageTitle">Arbeit ausschreiben</string>
    <string name="activity_second_supervisor_request">Zweitbetreuersuche</string>
    <string name="activity_advertise_thesis_request_thesis_type_title">Titel:</string>
    <string name="activity_advertise_thesis_plainTextTitle">Titel der Arbeit</string>
    <string name="activity_advertise_thesis_textViewDescription">Beschreibung:</string>
    <string name="activity_advertise_thesis_multiLineTextDescription">Beschreibe hier die Arbeit</string>
    <string name="activity_advertise_thesis_buttonCreate">Erstellen</string>
    <string name="activity_supervise_thesis_pageTitleFirst">Erstbetreuung</string>
    <string name="activity_supervise_thesis_pageTitleSecond">Zweitbetreuung</string>
    <string name="activity_supervise_thesis_buttonSecondSupervisor">Zweitbetreuer Suchen</string>
    <string name="activity_supervise_thesis_buttonDeleteDraft">Draft Löschen</string>
    <string name="activity_supervise_thesis_headerTitle">Titel:</string>
    <string name="activity_supervise_thesis_headerSubTitle">Untertitel:</string>
    <string name="activity_supervise_thesis_headerSupervisionState">Betreuungsstatus:</string>
    <string name="activity_supervise_thesis_headerSupervisorFirst">Erstbetreuer:</string>
    <string name="activity_supervise_thesis_headerSupervisorSecond">Zweitbetreuer:</string>
    <string name="activity_supervise_thesis_headerStudent">Student:</string>
    <string name="activity_supervise_thesis_headerExpose">Exposé:</string>
    <string name="activity_supervise_thesis_iconExpose_description">A file icon</string>
    <string name="activity_supervise_thesis_headerStatus">Status:</string>
    <string name="activity_supervise_thesis_headerInvoiceStatus">Rechnungsstatus:</string>
    <string name="activity_edit_supervised_thesis_pageTitle">Thesis Anpassen</string>
    <string name="activity_edit_supervised_thesis_headerTitle">Titel:</string>
    <string name="activity_edit_supervised_thesis_headerSubTitle">Untertitel:</string>
    <string name="activity_edit_supervised_thesis_headerSupervisionState">Betreuungsstatus:</string>
    <string name="activity_edit_supervised_thesis_headerSupervisor">Zweitbetreuer:</string>
    <string name="activity_edit_supervised_thesis_headerStudent">Student:</string>
    <string name="activity_edit_supervised_thesis_headerExpose">Exposé:</string>
    <string name="activity_edit_supervised_thesis_iconExpose_description">A file icon</string>
    <string name="activity_edit_supervised_thesis_headerStatus">Status:</string>
    <string name="activity_edit_supervised_thesis_headerInvoiceStatus">Rechnungsstatus:</string>
    <string name="activity_edit_supervised_thesis_buttonSave">Speichern</string>
    <string name="activity_supervise_thesis_editThesis">Editieren</string>
    <string name="fragment_theses_requests_headerTitle">Anfragen</string>
    <string name="advertised_theses_list_item_row_textTitle_desc">Thesis Titel</string>
    <string name="supervisory_state_spinner_item_row_textState_desc">Betreuungsstatus</string>
    <string name="thesis_state_spinner_item_row_textState_desc">Thesisstatus</string>
    <string name="second_supervisor_request_list_item_row_textName_desc">Name</string>
    <string name="advertised_theses_list_item_row_textDescription_desc">Beschreibung der Thesis</string>
    <string name="theses_requests_list_item_row_textTitle_desc">Thesis Titel</string>
    <string name="theses_requests_list_item_row_textName_desc">Name</string>
    <string name="supervised_theses_list_item_row_textTitle_desc">Thesis Titel</string>
    <string name="supervised_theses_list_item_row_textStudent_desc">Student</string>
    <string name="invoice_state_spinner_item_row_textState_desc">Rechnungsstatus</string>
    <string name="fragment_supervised_thesis_headerTitle">Betreute Arbeiten</string>
    <string name="fragment_my_research_advertiseThesisButton">Neue Arbeit ausschreiben</string>
    <string name="ok">Okay</string>
    <string name="cancel">Abbruch</string>
    <string name="activity_second_supervisor_request_dialog_title">Zweitbetreueranfrage</string>
    <string name="activity_second_supervisor_request_dialog_question">Soll dieser Kollege um Zweitbetreuung gebeten werden?</string>
    <string name="activity_second_supervisor_request_dialog_question_supervisorName">Der ausgewählte Zweitbetreuer ist:</string>
    <string name="activity_supervise_thesis_dialog_delete_draft">Thesis Draft Löschen</string>
    <string name="activity_supervise_thesis_dialog_delete_draft_text">Soll dieser Thesis Draft tatsächlich gelöscht werden?</string>
    <string name="error_thesis_not_saved">Thesis konnte nicht erstellt werden.</string>
    <string name="error_loading_data">Daten konnten nicht geladen werden</string>
    <string name="error_request_not_sent">Betreuung konnte nicht beantragt werden</string>
    <string name="theses_request_already_send">Du hast für diese Anschlussarbeit bereits um Betreuung gebeten</string>
    <string name="ThesisStateModel_ADVERTISED">Ausgeschrieben</string>
    <string name="ThesisStateModel_IN_PROGRESS">In Bearbeitung</string>
    <string name="ThesisStateModel_TURNED_IN">Eingereicht</string>
    <string name="ThesisStateModel_RATED">Bewertet</string>
    <string name="ThesisStateModel_FINISHED">Abgeschlossen</string>
    <string name="SupervisoryStateModel_DRAFT">Noch nicht in Betreuung</string>
    <string name="SupervisoryStateModel_SUPERVISED">In Betreuung</string>
    <string name="InvoiceStateModel_UNFINISHED">Noch nicht abgerechnet</string>
    <string name="InvoiceStateModel_INVOICE_SENT">Rechnung versendet</string>
    <string name="InvoiceStateModel_INVOICE_PAID">Rechnung bezahlt</string>
    <string name="SupervisoryTypeList_FIRST_SUPERVISOR">1.</string>
    <string name="SupervisoryTypeList_SECOND_SUPERVISOR">2.</string>
    <string name="SupervisionRequestTypeModel_SUPERVISION">1.</string>
    <string name="SupervisionRequestTypeModel_SECOND_SUPERVISOR">2.</string>
    <string name="activity_edit_supervised_thesis_dialog_title">Speichern</string>
    <string name="activity_edit_supervised_thesis_dialog_question">Statusänderungen können nicht rückgängig gemacht werden. Bist du sicher, dass du fortfahren willst?</string>
    <string name="empty_student_name">Kein Student zugewiesen</string>
    <string name="empty_subtitle">Noch kein Untertitel gesetzt</string>
    <string name="no_expose_uploaded">Bitte lade ein Exposé hoch. Ohne dieses kannst du keine Betreuung beantragen.</string>
    <string name="fragment_advertised_theses_emptyTheses">Zur Zeit sind leider keine Arbeiten für dich verfügbar. Entweder arbeitest du bereits an einer Abschlussarbeit oder kein Betreuer hat zur Zeit etwas ausgeschrieben.</string>
    <string name="fragment_theses_requests_emptyTheses">Zur Zeit sind keine Anfragen für eine Betreuung vorhanden.</string>
    <string name="fragment_supervised_thesis_emptyTheses">Zur Zeit sind keine Arbeiten in Betreuung.</string>
    <string name="activity_second_supervisor_request_emptySupervisors">Zur Zeit stehen leider keine weiteren Tutoren für Zweitbetreuungsanfragen zur Verfügung.</string>
    <string name="activity_view_thesis_request_thesis_rejectInfoMessageStudent">Die Anfrage wurde abgelehnt. Der Student wird darüber per eMail informiert werden.</string>
    <string name="activity_view_thesis_request_thesis_rejectInfoMessageSupervisor">Die Anfrage wurde abgelehnt. Der Kollege wird per eMail darüber informiert werden.</string>
    <string name="activity_view_thesis_request_thesis_acceptInfoMessageStudent">Die Anfrage wurde angenommen. Der Student wird darüber per eMail informiert werden.</string>
    <string name="activity_view_thesis_request_thesis_acceptInfoMessageSupervisor">Die Anfrage wurde angenommen. Der Kollege wird per eMail darüber informiert werden.</string>
    <string name="activity_submit_thesis_sendMessage">Deine Anfrage wurde abgeschickt. Du erhälst Feedback über die Annahme oder Ablehnung deiner Anfrage per eMail. Wenn der Betreuer deine Anfrage annimmt, wirst du auch hier in der App deine begonnene Arbeit sehen können.</string>
    <string name="view_pdf_final_state">Das Exposé dieser fertiggestellten Abschlussarbeiten kann hier leider nicht mehr angesehen werden.</string>
</resources>