<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_supervise_thesis_constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitySuperviseThesis">

    <ScrollView
        android:id="@+id/activity_supervise_thesis_scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/activity_supervise_thesis_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/activity_supervise_thesis_appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/iu_turquoise"
                android:theme="@style/Theme.SupervisionApp.AppBarOverlay">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/activity_supervise_thesis_app_bar_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:minHeight="?actionBarSize"
                        android:padding="@dimen/appbar_padding"
                        android:text="@string/app_name"
                        android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical">

                        <ImageView
                            android:id="@+id/activity_supervise_thesis_appBar_logout"
                            android:layout_width="25dp"
                            android:layout_height="26dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerInParent="true"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/ic_logout" />
                    </RelativeLayout>

                </LinearLayout>

            </com.google.android.material.appbar.AppBarLayout>

            <LinearLayout
                android:id="@+id/activity_supervise_thesis_innerLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/activity_supervise_thesis_headLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/activity_supervise_thesis_backArrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        app:srcCompat="@drawable/ic_backarrow" />

                    <TextView
                        android:id="@+id/activity_supervise_thesis_pageTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/activity_supervise_thesis_pageTitleFirst"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <Button
                    android:id="@+id/activity_supervise_thesis_buttonSecondSupervisor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/iu_turquoise"
                    android:text="@string/activity_supervise_thesis_buttonSecondSupervisor" />

                <Button
                    android:id="@+id/activity_supervise_thesis_buttonDeleteDraft"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/iu_turquoise"
                    android:text="@string/activity_supervise_thesis_buttonDeleteDraft" />

                <TextView
                    android:id="@+id/activity_supervise_thesis_headerTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:labelFor="@id/activity_supervise_thesis_textTitle"
                    android:text="@string/activity_supervise_thesis_headerTitle"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/activity_supervise_thesis_textTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/activity_supervise_thesis_headerSubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:labelFor="@id/activity_supervise_thesis_textSubTitle"
                    android:text="@string/activity_supervise_thesis_headerSubTitle"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/activity_supervise_thesis_textSubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/activity_supervise_thesis_headerSupervisionState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:labelFor="@id/activity_supervise_thesis_textSupervisionState"
                    android:text="@string/activity_supervise_thesis_headerSupervisionState"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/activity_supervise_thesis_textSupervisionState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/activity_supervise_thesis_headerSupervisor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:labelFor="@id/activity_supervise_thesis_textSupervisor"
                    android:text="@string/activity_supervise_thesis_headerSupervisorFirst"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/activity_supervise_thesis_textSupervisor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/activity_supervise_thesis_headerStudent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:labelFor="@id/activity_supervise_thesis_textStudent"
                    android:text="@string/activity_supervise_thesis_headerStudent"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/activity_supervise_thesis_textStudent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/activity_supervise_thesis_headerExpose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:labelFor="@id/activity_supervise_thesis_iconExpose"
                    android:text="@string/activity_supervise_thesis_headerExpose"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/activity_supervise_thesis_iconExpose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/activity_supervise_thesis_iconExpose_description"
                    app:srcCompat="@drawable/ic_file_icon" />

                <TextView
                    android:id="@+id/activity_supervise_thesis_headerStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:labelFor="@id/activity_supervise_thesis_textStatus"
                    android:text="@string/activity_supervise_thesis_headerStatus"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/activity_supervise_thesis_textStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/activity_supervise_thesis_headerInvoiceStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:labelFor="@id/activity_supervise_thesis_textInvoiceStatus"
                    android:text="@string/activity_supervise_thesis_headerInvoiceStatus"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/activity_supervise_thesis_textInvoiceStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/activity_supervise_thesis_editThesis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/iu_turquoise"
                    android:text="@string/activity_supervise_thesis_editThesis" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>