<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_my_thesis_constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.FragmentMyThesis">

    <ScrollView
        android:id="@+id/fragment_my_thesis_scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/fragment_my_thesis_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fragment_my_thesis_headerTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/fragment_my_thesis_header_title_thesis"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fragment_my_thesis_textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/fragment_my_thesis_headerFirstSupervisor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/fragment_my_thesis_header_first_supervisor"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/fragment_my_thesis_textFirstSupervisor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/fragment_my_thesis_headerSecondSupervisor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="visible"
                tools:text="@string/fragment_my_thesis_header_second_supervisor" />

            <TextView
                android:id="@+id/fragment_my_thesis_textSecondSupervisor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/fragment_my_thesis_headerExpose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                android:labelFor="@+id/fragment_my_thesis_iconExpose"
                tools:text="@string/fragment_my_thesis_header_expose"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/fragment_my_thesis_iconExpose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/fragment_my_thesis_iconExposeDescription"
                android:src="@drawable/ic_file_icon" />

            <TextView
                android:id="@+id/fragment_my_thesis_headerStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="@string/fragment_my_thesis_header_status"
                android:visibility="visible" />

            <TextView
                android:id="@+id/fragment_my_thesis_textStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:visibility="visible" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>